--- a/src/blocks/offer.css
+++ b/src/blocks/offer.css
@@ -66,7 +66,7 @@
 	padding: 0;
 }
 
-.offer__switch-wrapper {
+.switch-slide__offer {
 	display: none;
 	position: relative;
 	z-index: 4;
@@ -74,44 +74,6 @@
 	max-width: 720px;
 	transform: translateY(-62px);
 	margin-bottom: -10px;
-}
-
-.offer__switch-list {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.offer__switch-button {
-	margin: 0;
-	padding: 0;
-	background: #fff;
-	border: none;
-	width: 6px;
-	height: 6px;
-	border-radius: 3px;
-	cursor: pointer;
-}
-
-.offer__switch-button_active {
-	margin: 0;
-	padding: 0;
-	background: #fff;
-	border: none;
-	width: 10px;
-	height: 10px;
-	border-radius: 5px;
-}
-
-.offer__switch-item {
-	margin: 0 10px 0 0;
-}
-
-.offer__switch-item:last-of-type {
-	margin: 0;
 }
 
 .switch__offer {
@@ -184,7 +146,7 @@
 		z-index: 1;
 	}
 
-	.offer__switch-wrapper {
+	.switch-slide__offer {
 		display: block;
 	}
 
